tempory fix scrollbar sidebar

--- a/css/leaflet-sidebar.css
+++ b/css/leaflet-sidebar.css
@@ -35,11 +35,9 @@
       right: 10px; } }
 
 .sidebar-tabs {
-  border-collapse:collapse;
-  display : table;
   top: 0;
   bottom: 0;
-  height: 100%;
+  height:100%;
   background-color: #fff; }
 
   .sidebar-left .sidebar-tabs {
@@ -47,14 +45,17 @@
   .sidebar-right .sidebar-tabs {
 
     right: 0; }
+  .sidebar-tabs> ul:first-child{
+    height: calc( 100% - 80px);
+  }
   .sidebar-tabs, .sidebar-tabs > ul {
     overflow-y:auto;
-    height:88vh;
     position: relative;
     width: 40px;
     margin: 0;
     padding: 0;
     }
+
     .sidebar-tabs > li, .sidebar-tabs > ul > li {
       width: 100%;
       height: 40px;
@@ -83,10 +84,9 @@
         text-decoration: none;
         text-align: center; }
         .sidebar-tabs > ul + ul {
-            display : table-row;
-            vertical-align : bottom;
-            height : 1px;
-            bottom: 0;
+            position:relative;
+            vertical-align: bottom;
+            bottom: 0px
 }
 
 .sidebar-content {
